CREATE TABLE IF NOT EXISTS photo (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    file_path TEXT NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
);