syntax = "proto3";
package album;
option go_package = "pkg/pb/album";

import "google/protobuf/empty.proto";

service AlbumService {
  rpc Create(CreateAlbumRequest) returns (Album);
  rpc Get(GetAlbumRequest) returns (Album);
  rpc GetByTrip(GetAlbumByTripRequest) returns (Album);
  rpc Update(UpdateAlbumRequest) returns (Album);
  rpc Delete(DeleteAlbumRequest) returns (google.protobuf.Empty);
  rpc UploadPhoto(UploadPhotoRequest) returns (UploadPhotoResponse);
  rpc AddPhoto(AddPhotoRequest) returns (AlbumPhoto);
  rpc RemovePhoto(RemovePhotoRequest) returns (google.protobuf.Empty);
  rpc GetPhotos(GetAlbumPhotosRequest) returns (GetAlbumPhotosResponse);
}

message CreateAlbumRequest {
  uint64 trip_id = 1;
  string name = 2;
  string description = 3;
  int32 max_photos = 4;
}

message GetAlbumRequest {
  uint64 id = 1;
}

message GetAlbumByTripRequest {
  uint64 trip_id = 1;
}

message UpdateAlbumRequest {
  uint64 id = 1;
  string name = 2;
  string description = 3;
  int32 max_photos = 4;
}

message DeleteAlbumRequest {
  uint64 id = 1;
}

message Album {
  uint64 id = 1;
  uint64 trip_id = 2;
  string name = 3;
  string description = 4;
  optional uint64 cover_photo_id = 5;
  int32 max_photos = 6;
}

message AddPhotoRequest {
  uint64 album_id = 1;
  uint64 photo_id = 2;
  int32 order = 3;
}

// UploadPhotoRequest: путь к уже сохранённому файлу, album_id для связки
message UploadPhotoRequest {
  uint64 album_id = 1;
  string file_path = 2;
}

message UploadPhotoResponse {
  uint64 photo_id = 1;
  string file_url = 2;
}

message RemovePhotoRequest {
  uint64 album_id = 1;
  uint64 photo_id = 2;
}

message AlbumPhoto {
  uint64 album_id = 1;
  uint64 photo_id = 2;
  int32 order_index = 3;
  string created_at = 4;
  string file_url = 5;
}

message GetAlbumPhotosRequest {
  uint64 album_id = 1;
}

message GetAlbumPhotosResponse {
  repeated AlbumPhoto photos = 1;
}
