erDiagram
    USER ||--o{ SESSION : "имеет"
    USER ||--o{ FAVORITE : "добавляет в избранное"
    USER ||--o{ REVIEW : "оставляет"
    USER ||--o{ TRIP : "создаёт"
    USER ||--o{ TICKET : "создаёт"
    PLACE ||--o{ FAVORITE : "избранное"
    PLACE ||--o{ PLACE_PHOTO : "имеет"
    PLACE ||--o{ REVIEW : "имеет"
    PLACE ||--o{ TRIP_ATTRACTIONS : "включено в поездку"
    COUNTRY ||--o{ LOCALITY : "содержит"
    LOCALITY ||--o{ PLACE : "находится"
    CATEGORY ||--o{ PLACE : "категория"
    TRIP ||--o{ TRIP_ATTRACTIONS : "маршрут"
    TRIP ||--o{ TRIP_MEMBER : "участники"
    TRIP ||--o{ ALBUM : "содержит"
    ALBUM ||--o{ ALBUM_PHOTO : "содержит"
    PHOTO ||--o{ ALBUM_PHOTO : "используется"
    PHOTO ||--o{ PLACE_PHOTO : "используется"
    TICKET_STATUS ||--o{ TICKET : "статус"
    TICKET_CATEGORY ||--o{ TICKET : "категория"
    TICKET ||--o{ MESSAGE : "содержит"